--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.0.0",
     "@fastify/jwt": "^8.0.1",
     "bcryptjs": "^2.4.3",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "tap": "^21.0.1"
   }
 }
